# PCD

./: .gitignore  README.md
.github/ISSUE_TEMPLATE/: rev1_adjustment.md
.github/workflows/: main.yml
docs/: Common.tex  Makefile  Reflection.tex
docs/Design/: README.md
docs/Design/SoftArchitecture/: MG.tex
docs/Design/SoftDetailedDes/: MIS.tex
docs/DevelopmentPlan/: DevelopmentPlan.tex  README.md
docs/HazardAnalysis/: HazardAnalysis.tex  README.md
docs/ProblemStatementAndGoals/: ProblemStatement.tex  README.md
docs/ReflectAndTrace/: ReflectAndTrace.tex
docs/SRS/: Makefile  index.adoc  metadata.adoc
docs/SRS-M/parts/: integrity.adoc
docs/SRS/parts/: bibliography.adoc  control.adoc  core.adoc  likelychanges.adoc  reflection.adoc  unlikelychanges.adoc
docs/SRS/parts/environment/: E1.adoc  E2.adoc  E3.adoc  E4.adoc  E5.adoc  E6.adoc  index.adoc
docs/SRS/parts/goals/: G1.adoc  G2.adoc  G3.adoc  G4.adoc  G5.adoc  G6.adoc  G7.adoc  index.adoc
docs/SRS/parts/project/: P1.adoc  P2.adoc  P3.adoc  P4.adoc  P5.adoc  P6.adoc  P7.adoc  control.adoc  index.adoc
docs/SRS/parts/system/: S1.adoc  S2.adoc  S3.adoc  S4.adoc  S5.adoc  S6.adoc  index.adoc
docs/VnVPlan/: README.md  VnVPlan.tex
docs/VnVReport/: README.md  VnVReport.tex
docs/projMngmnt/: Final_Team_Contrib.tex  POC_Team_Contrib.tex  Rev0_Team_Contrib.tex
src/: .gitignore  CMakeLists.txt  CMakeSettings.json  Setup.md  UnitTests.cpp  cloud_viewer.cpp  conversions.h  definitions.h  kinect2_grabber.h  main.cpp  ocv_PlaneDetect.h  ocv_SkinDetect.h  pcl_HelperFunctions.h  pcl_RegionEstimation.h  pcl_RegionGrowing.h  visualization.h
test/: README.md
